--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <div class="dropdown-content">
                         <a class="menu-horizontal-link" href="formulario.html">Contacto</a>
                         <a class="menu-horizontal-link" href="#">Localización</a>
-                        <a class="menu-horizontal-link" href="#">Sobre Nosotros</a>
+                        <a class="menu-horizontal-link" href="about.html">Sobre Nosotros</a>
                     </div>
                 </div>
-                <a class="menu-horizontal-link" href="#">Areas de Actuacion</a>
+                <a class="menu-horizontal-link" href="actuacion.html">Areas de Actuacion</a>
                 <a class="menu-horizontal-link" href="#">Noticias</a>
                 <a class="menu-horizontal-link" href="#">Publicaciones</a>
 
@@ -133,12 +133,9 @@
 
                 <nav class="footer-menu">
                     <a class="footer-menu-link" href="index.html">Home</a>
-                    <a class="footer-menu-link" href="#">Quienes Somos</a>
-                    <a class="footer-menu-link" href="#">Areas de Actuacion</a>
+                    <a class="footer-menu-link" href="about.html">Quienes Somos</a>
+                    <a class="footer-menu-link" href="actuacion.html">Areas de Actuacion</a>
                     <a class="footer-menu-link" href="formulario.html">Contacto</a>
-                    <a class="footer-menu-link" href="#">Noticias</a>
-                    <a class="footer-menu-link" href="#">Publicaciones</a>
-                    <a class="footer-menu-link" href="#">Localización</a>
                 </nav>
             </div>
 
